--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version> <!-- Použij nejnovější verzi -->
+            <version>8.0.33</version>
         </dependency>
     </dependencies>
 
